--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <a class="social-link rounded-circle text-white" href="https://www.instagram.com/tsukiliaro/"><i class="icon-social-instagram"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Karolina Zawisza {{ year }}</p>
+                <p class="text-muted small mb-0">Copyright &copy; Karolina Zawisza 2021</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
