--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="static/css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -101,7 +101,7 @@
                                     <p class="mb-0">Create a spotify playlist with a biggest hits from date of your choice!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="static/assets/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -112,7 +112,7 @@
                                     <p class="mb-0">Track flight prices and prepare for a wonderful journey!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="static/assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -123,7 +123,7 @@
                                     <p class="mb-0">Get some help with learning kanji and pass your N5 with flying colours!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="static/assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -134,7 +134,7 @@
                                     <p class="mb-0">Turn brainstorming into pleasure and never loose you thoughts again!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="static/assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
