--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </section>
         <!-- Map-->
         <div class="map" id="contact">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d80127.74159099718!2d16.92182458477203!3d51.12705698336857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fe9c2d4b58abf%3A0xb70956aec205e0f5!2zV3JvY8WCYXc!5e0!3m2!1sen!2spl!4v1634081731815!5m2!1sen!2spl"></iframe>          
             <br />
             <small><a href="https://www.google.com/maps/place/Market+Square/@51.1103736,17.0288421,17z/data=!3m1!4b1!4m5!3m4!1s0x470e40c57467f87b:0xe72be8d8d320d5d8!8m2!3d51.1103736!4d17.0310308?hl=en"></a></small>
         </div>
