--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Last, but not least!</strong></h4>
-                        <p class="text-faded mb-0">Scrum, Agile, TDD, SOLID</p>
+                        <p class="text-faded mb-0">Scrum, Agile, TDD, Git</p>
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Brainstorm Duck</div>
-                                    <p class="mb-0">Turn brainstorming into pleasure and never loose you thoughts again!</p>
+                                    <p class="mb-0">Turn brainstorming into pleasure and never loose your thoughts again!</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
