--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!-- Callout-->
-        <section class="callout">
+        <section id="callout" class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
                     Our future starts now - let's create it together!
@@ -176,7 +176,7 @@
                         <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://www.instagram.com/tsukiliaro/"><i class="icon-social-instagram"></i></a>
+                        <a class="social-link rounded-circle text-white" href="#callout"><i class="icon-social-google"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Karolina Zawisza 2021</p>
